2014-05-17  Jan Hubicka  <hubicka@ucw.cz>

	* ipa.c (update_visibility_by_resolution_info): New function.
	(function_and_variable_visibility): Use it.

2014-05-17  Jan Hubicka  <hubicka@ucw.cz>

	* cgraph.h (symtab_first_defined_symbol, symtab_next_defined_symbol):
	New functions.
	(FOR_EACH_DEFINED_SYMBOL): New macro.
	(varpool_first_static_initializer, varpool_next_static_initializer,
	varpool_first_defined_variable, varpool_next_defined_variable): Fix comments.
	(symtab_in_same_comdat_p): Correctly deal with inline functions.

2014-05-17  Trevor Saunders  <tsaunders@mozilla.com>

	* ggc-page.c (ggc_handle_finalizers): Add comment.

2014-05-17  Trevor Saunders  <tsaunders@mozilla.com>

	* ggc-common.c (ggc_internal_cleared_alloc): Adjust.
	* ggc-none.c (ggc_internal_alloc): Assert if a finalizer is passed.
	(ggc_internal_cleared_alloc): Likewise.
	* ggc-page.c (finalizer): New class.
	(vec_finalizer): Likewise.
	(globals::finalizers): New member.
	(globals::vec_finalizers): Likewise.
	(ggc_internal_alloc): Record the finalizer if any for the block being
	allocated.
	(ggc_handle_finalizers): New function.
	(ggc_collect): Call ggc_handle_finalizers.
	* ggc.h (ggc_internal_alloc): Add arguments to allow installing a
	finalizer.
	(ggc_internal_cleared_alloc): Likewise.
	(finalize): New function.
	(need_finalization_p): Likewise.
	(ggc_alloc): Install the type's destructor as the finalizer if it
	might do something.
	(ggc_cleared_alloc): Likewise.
	(ggc_vec_alloc): Likewise.
	(ggc_cleared_vec_alloc): Likewise.

2014-05-17  Trevor Saunders  <tsaunders@mozilla.com>

	* ggc.h (ggc_alloc_cleared_simd_clone_stat): Remove function.

2014-05-17  Trevor Saunders  <tsaunders@mozilla.com>

	* alias.c (record_alias_subset): Adjust.
	* bitmap.c (bitmap_element_allocate): Likewise.
	(bitmap_gc_alloc_stat): Likewise.
	* cfg.c (init_flow): Likewise.
	(alloc_block): Likewise.
	(unchecked_make_edge): Likewise.
	* cfgloop.c (alloc_loop): Likewise.
	(flow_loops_find): Likewise.